# weather-mcp

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  main.py  pyproject.toml  pyrightconfig.json
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
app/: main.py  schemas.py  weather.py
tests/: test_main.py
