[project]
name = "python-template-app"
version = "0.1.0"
description = "A FastAPI application template with batteries-included tooling"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mcp>=1.26.0",
]

[dependency-groups]
dev = ["pre-commit>=4.0.0", "pytest>=9.0.2", "ruff>=0.9.0"]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
# E/W: pycodestyle, F: pyflakes, I: isort
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
